refactor: remove property tests flavor
We have replaced property tests with tests from the tests suite.
Additionally this means that the smoke flavor is now simply the
correctness tests and has been renamed accordingly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [workspace]
 resolver = "2"
-members = ["property", "hermetic"]
+members = ["hermetic"]
 
 [workspace.dependencies]
 ceramic-tests-hermetic-driver = { path = "./hermetic/" }
-ceramic-tests-property = { path = "./property/" }
 
 [workspace.package]
 version = "0.1.0"
