fix: remove property from docker build

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,5 +1,5 @@
 # Create a release from the latest tag
-name: Create Release
+name: Create Hermetic Driver Release
 
 permissions:
   contents: write
