--- a/suite/package.json
+++ b/suite/package.json
@@ -27,10 +27,12 @@
     "@ceramicnetwork/stream-tile": "3.3.0",
     "@ceramicnetwork/streamid": "3.3.0",
     "@composedb/devtools": "0.6.1",
+    "@ipld/dag-json": "^10.1.7",
     "@jest/globals": "^29.7.0",
     "@jest/reporters": "^29.7.0",
     "@stablelib/random": "^1.0.2",
     "axios": "^0.24.0",
+    "cartonne": "^3.0.1",
     "cross-fetch": "^4.0.0",
     "dids": "5.0.2",
     "dotenv": "^16.3.1",
@@ -39,6 +41,7 @@
     "key-did-resolver": "4.0.0",
     "luxon": "3.2.1",
     "multiformats": "^13.0.1",
+    "multihashes-sync": "^2.0.0",
     "node-jq": "^2.3.5",
     "rxjs": "^7.8.1",
     "ts-jest": "^29.1.1",
