--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -90,6 +90,7 @@ jobs:
   run-tests:
     name: Test
     runs-on: ubuntu-latest
+    environment: test
     needs:
       - generate-matrix
       - build-driver
@@ -111,8 +112,8 @@ jobs:
         name: Get GKE credentials
         uses: 'google-github-actions/get-gke-credentials@v1'
         with:
-          cluster_name: ${{ secrets.GKE_CLUSTER }}
-          location: ${{ secrets.GKE_ZONE }}
+          cluster_name: ${{ vars.GKE_CLUSTER }}
+          location: ${{ vars.GKE_ZONE }}
       - uses: actions/download-artifact@master
         with:
           name: hermetic-driver
