--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -61,6 +61,7 @@ jobs:
   run-performance-tests:
     name: Performance Tests
     runs-on: ubuntu-latest
+    environment: test
     needs:
       - generate-matrix
       - build-driver
@@ -79,8 +80,8 @@ jobs:
       - name: Get GKE credentials
         uses: 'google-github-actions/get-gke-credentials@v1'
         with:
-          cluster_name: ${{ secrets.GKE_CLUSTER }}
-          location: ${{ secrets.GKE_ZONE }}
+          cluster_name: ${{ vars.GKE_CLUSTER }}
+          location: ${{ vars.GKE_ZONE }}
       - uses: actions/download-artifact@master
         with:
           name: hermetic-driver
