--- a/suite/package.json
+++ b/suite/package.json
@@ -20,12 +20,12 @@
     "@aws-sdk/client-api-gateway": "^3.427.0",
     "@aws-sdk/client-dynamodb": "^3.427.0",
     "@aws-sdk/client-lambda": "^3.427.0",
-    "@ceramicnetwork/common": "4.1.0",
-    "@ceramicnetwork/http-client": "4.1.0",
-    "@ceramicnetwork/stream-model": "3.1.0",
-    "@ceramicnetwork/stream-model-instance": "3.1.0",
-    "@ceramicnetwork/stream-tile": "4.1.0",
-    "@ceramicnetwork/streamid": "4.1.0",
+    "@ceramicnetwork/common": "5.1.0-nightly.20240214002530.0",
+    "@ceramicnetwork/http-client": "5.0.1-nightly.20240214002530.0",
+    "@ceramicnetwork/stream-model": "4.0.1-nightly.20240214002530.0",
+    "@ceramicnetwork/stream-model-instance": "4.0.1-nightly.20240214002530.0",
+    "@ceramicnetwork/stream-tile": "5.0.1-nightly.20240214002530.0",
+    "@ceramicnetwork/streamid": "5.0.1-nightly.20240214002530.0",
     "@composedb/devtools": "0.6.1",
     "@ipld/dag-json": "^10.1.7",
     "@jest/globals": "^29.7.0",
