feat: use new endpoint to get events for model
also build before running tests to make iterating easier

--- a/suite/package.json
+++ b/suite/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand --reporters default --setupFiles dotenv/config"
+    "test": "tsc && NODE_OPTIONS=--experimental-vm-modules jest --runInBand --reporters default --setupFiles dotenv/config"
   },
   "devDependencies": {
     "@skypack/package-check": "^0.2.2",
