--- a/networks/basic-rust.yaml
+++ b/networks/basic-rust.yaml
@@ -7,7 +7,13 @@ spec:
   replicas: 2
   ceramic:
     - ipfs:
-        rust: { env: { CERAMIC_ONE_RECON: "true" } }
+        rust:
+          env:
+            CERAMIC_ONE_RECON: "true"
+          resourceLimits:
+          cpu: "4"
+          memory: 1Gi
+        storageClass: keramik-ssd
   # Use Kubo with CAS because it still needs pubsub
   cas:
     ipfs:
