--- a/networks/basic-rust.yaml
+++ b/networks/basic-rust.yaml
@@ -6,11 +6,23 @@ metadata:
 spec:
   replicas: 2
   ceramic:
+    - env:
+        CERAMIC_RECON_MODE: "true"
+      imagePullPolicy: Always # Ensures the image is always pulled before starting the pod
     - ipfs:
-        rust: { env: { CERAMIC_ONE_RECON: "true" } }
+        rust:
+          env:
+            CERAMIC_ONE_RECON: "true"
+          resourceLimits:
+            cpu: "4"
+            memory: "1Gi"
+    - env:
+        CERAMIC_RECON_MODE: "true"
+
   # Use Kubo with CAS because it still needs pubsub
   cas:
     ipfs:
       go: {}
   monitoring:
     namespaced: true
+
