--- a/suite/package.json
+++ b/suite/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "tsc && NODE_OPTIONS=--experimental-vm-modules jest --runInBand --reporters default --setupFiles dotenv/config"
+    "test": "tsc && NODE_OPTIONS=--experimental-vm-modules jest --runInBand --reporters default --setupFiles dotenv/config",
+    "format": "prettier --write '**/*.{js,ts,jsx,tsx,json,css,scss,md}'"
   },
   "devDependencies": {
     "@skypack/package-check": "^0.2.2",
@@ -26,7 +27,7 @@
     "@ceramicnetwork/stream-model-instance": "4.0.1-nightly.20240214002530.0",
     "@ceramicnetwork/stream-tile": "5.0.1-nightly.20240214002530.0",
     "@ceramicnetwork/streamid": "5.0.1-nightly.20240214002530.0",
-    "@composedb/devtools": "0.6.1",
+    "@ceramicnetwork/common-test-utils": "^3.0.1-rc.0",
     "@ipld/dag-json": "^10.1.7",
     "@jest/globals": "^29.7.0",
     "@jest/reporters": "^29.7.0",
@@ -45,7 +46,8 @@
     "node-jq": "^2.3.5",
     "rxjs": "^7.8.1",
     "ts-jest": "^29.1.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "uint8arrays": "^5.0.1"
   },
   "prettier": "eslint-config-3box/prettier.config",
   "packageManager": "pnpm@^8.8.0"
