--- a/networks/basic-rust.yaml
+++ b/networks/basic-rust.yaml
@@ -8,6 +8,11 @@ spec:
   ceramic:
     - env:
         CERAMIC_RECON_MODE: "true"
+      image: "samika98/ceramic-dev:latest"
+      imagePullPolicy: Always # Ensures the image is always pulled before starting the pod
+    - env:
+        CERAMIC_RECON_MODE: "true"
+      image: "samika98/ceramic-dev:latest"
       imagePullPolicy: Always # Ensures the image is always pulled before starting the pod
     - ipfs:
         rust:
