--- a/simulations/basic-simulation.yaml
+++ b/simulations/basic-simulation.yaml
@@ -1,9 +1,9 @@
 apiVersion: "keramik.3box.io/v1alpha1"
 kind: Simulation
 metadata:
-  name: recon
+  name: no-sig-validation
 spec:
-  scenario: recon-event-sync # or recon-event-key-sync if you're using rust-ceramic without recon data
+  scenario: ceramic-new-streams-benchmark # or recon-event-key-sync if you're using rust-ceramic without recon data
   throttleRequests: 300 # include to define a "steady sync" scenario where the worker creates about this many events/second
   successRequestTarget: 200 # override the default value of 300 to determine how many events must be synced per second to other peers in the network
   users: 2 # increase to generate more events, 1 is probably sufficient for our 300/s goal
