--- a/suite/package.json
+++ b/suite/package.json
@@ -21,19 +21,22 @@
     "@aws-sdk/client-api-gateway": "^3.427.0",
     "@aws-sdk/client-dynamodb": "^3.427.0",
     "@aws-sdk/client-lambda": "^3.427.0",
+    "@ceramicnetwork/codecs": "^4.1.0",
     "@ceramicnetwork/common": "5.1.0-nightly.20240214002530.0",
+    "@ceramicnetwork/common-test-utils": "^3.0.1-rc.0",
     "@ceramicnetwork/http-client": "5.0.1-nightly.20240214002530.0",
     "@ceramicnetwork/stream-model": "4.0.1-nightly.20240214002530.0",
     "@ceramicnetwork/stream-model-instance": "4.0.1-nightly.20240214002530.0",
     "@ceramicnetwork/stream-tile": "5.0.1-nightly.20240214002530.0",
     "@ceramicnetwork/streamid": "5.0.1-nightly.20240214002530.0",
-    "@ceramicnetwork/common-test-utils": "^3.0.1-rc.0",
     "@ipld/dag-json": "^10.1.7",
     "@jest/globals": "^29.7.0",
     "@jest/reporters": "^29.7.0",
     "@stablelib/random": "^1.0.2",
     "axios": "^0.24.0",
     "cartonne": "^3.0.1",
+    "codeco": "^1.2.1",
+    "cross-eventsource": "^1.0.0",
     "cross-fetch": "^4.0.0",
     "dids": "5.0.2",
     "dotenv": "^16.3.1",
