--- a/suite/package.json
+++ b/suite/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "tsc && NODE_OPTIONS=--experimental-vm-modules jest --runInBand --reporters default --setupFiles dotenv/config",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand --reporters default --setupFiles dotenv/config",
     "format": "prettier --write '**/*.{js,ts,jsx,tsx,json,css,scss,md}'"
   },
   "devDependencies": {
