--- a/networks/basic-rust.yaml
+++ b/networks/basic-rust.yaml
@@ -8,13 +8,9 @@ spec:
   ceramic:
     - env:
         CERAMIC_RECON_MODE: "true"
-      image: "ceramicnetwork/js-ceramic:dev"
+      image: "ceramicnetwork/composedb:dev"
       imagePullPolicy: Always # Ensures the image is always pulled before starting the pod
-    - env:
-        CERAMIC_RECON_MODE: "true"
-      image: "ceramicnetwork/js-ceramic:dev"
-      imagePullPolicy: Always # Ensures the image is always pulled before starting the pod
-    - ipfs:
+      ipfs:
         rust:
           env:
             CERAMIC_ONE_RECON: "true"
