--- a/suite/package.json
+++ b/suite/package.json
@@ -22,13 +22,16 @@
     "@aws-sdk/client-dynamodb": "^3.427.0",
     "@aws-sdk/client-lambda": "^3.427.0",
     "@ceramicnetwork/codecs": "^4.1.0",
-    "@ceramicnetwork/common": "5.1.0-nightly.20240214002530.0",
-    "@ceramicnetwork/common-test-utils": "^3.0.1-rc.0",
-    "@ceramicnetwork/http-client": "5.0.1-nightly.20240214002530.0",
-    "@ceramicnetwork/stream-model": "4.0.1-nightly.20240214002530.0",
-    "@ceramicnetwork/stream-model-instance": "4.0.1-nightly.20240214002530.0",
-    "@ceramicnetwork/stream-tile": "5.0.1-nightly.20240214002530.0",
-    "@ceramicnetwork/streamid": "5.0.1-nightly.20240214002530.0",
+    "@ceramicnetwork/common": "^5.2.0",
+    "@ceramicnetwork/common-test-utils": "^3.3.0",
+    "@ceramicnetwork/http-client": "^5.2.0",
+    "@ceramicnetwork/stream-model": "^4.2.0",
+    "@ceramicnetwork/stream-model-instance": "^4.3.0",
+    "@ceramicnetwork/stream-tile": "^5.2.0",
+    "@ceramicnetwork/streamid": "^5.0.0",
+    "@composedb/devtools-node": "^0.7.1",
+    "@composedb/devtools": "^0.7.1",
+    "@composedb/client": "^0.7.1",
     "@ipld/dag-json": "^10.1.7",
     "@jest/globals": "^29.7.0",
     "@jest/reporters": "^29.7.0",
@@ -50,7 +53,8 @@
     "rxjs": "^7.8.1",
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.5",
-    "uint8arrays": "^5.0.1"
+    "uint8arrays": "^5.0.1",
+    "graphql-request": "^6.1.0"
   },
   "prettier": "eslint-config-3box/prettier.config",
   "packageManager": "pnpm@^8.8.0"
