--- a/suite/package.json
+++ b/suite/package.json
@@ -21,17 +21,16 @@
     "@aws-sdk/client-api-gateway": "^3.427.0",
     "@aws-sdk/client-dynamodb": "^3.427.0",
     "@aws-sdk/client-lambda": "^3.427.0",
-    "@ceramicnetwork/codecs": "^4.1.0",
+    "@ceramicnetwork/codecs": "^4.2.0",
     "@ceramicnetwork/common": "^5.2.0",
     "@ceramicnetwork/common-test-utils": "^3.3.0",
-    "@ceramicnetwork/http-client": "5.3.0",
+    "@ceramicnetwork/http-client": "^5.3.0",
     "@ceramicnetwork/stream-model": "^4.2.0",
     "@ceramicnetwork/stream-model-instance": "^4.3.0",
     "@ceramicnetwork/stream-tile": "^5.2.0",
     "@ceramicnetwork/streamid": "^5.0.0",
-    "@composedb/devtools-node": "^0.7.1",
-    "@composedb/devtools": "^0.7.1",
     "@composedb/client": "^0.7.1",
+    "@composedb/devtools": "^0.7.1",
     "@ipld/dag-json": "^10.1.7",
     "@jest/globals": "^29.7.0",
     "@jest/reporters": "^29.7.0",
@@ -43,6 +42,7 @@
     "cross-fetch": "^4.0.0",
     "dids": "5.0.2",
     "dotenv": "^16.3.1",
+    "graphql-request": "^6.1.0",
     "jest": "^29.7.0",
     "key-did-provider-ed25519": "4.0.2",
     "key-did-resolver": "4.0.0",
@@ -53,8 +53,7 @@
     "rxjs": "^7.8.1",
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.5",
-    "uint8arrays": "^5.0.1",
-    "graphql-request": "^6.1.0"
+    "uint8arrays": "^5.0.1"
   },
   "prettier": "eslint-config-3box/prettier.config",
   "packageManager": "pnpm@^8.8.0"
