--- a/networks/basic-rust.yaml
+++ b/networks/basic-rust.yaml
@@ -8,6 +8,8 @@ spec:
   ceramic:
     - env:
         CERAMIC_RECON_MODE: "true"
+      image: "ceramicnetwork/composedb:dev"
+      imagePullPolicy: Always # Ensures the image is always pulled before starting the pod
       ipfs:
         rust:
           env:
