--- a/suite/package.json
+++ b/suite/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.57",
     "eslint-config-3box": "^1.0.0",
     "prettier": "^3.0.3",
+    "semver": "^7.3.5",
     "ts-loader": "^9.4.4"
   },
   "dependencies": {
