--- a/suite/package.json
+++ b/suite/package.json
@@ -15,20 +15,23 @@
     "@types/node": "^16.18.57",
     "eslint-config-3box": "^1.0.0",
     "prettier": "^3.0.3",
+    "semver": "^7.3.5",
     "ts-loader": "^9.4.4"
   },
   "dependencies": {
     "@aws-sdk/client-api-gateway": "^3.427.0",
     "@aws-sdk/client-dynamodb": "^3.427.0",
     "@aws-sdk/client-lambda": "^3.427.0",
-    "@ceramicnetwork/codecs": "^4.1.0",
-    "@ceramicnetwork/common": "5.1.0-nightly.20240214002530.0",
-    "@ceramicnetwork/common-test-utils": "^3.0.1-rc.0",
-    "@ceramicnetwork/http-client": "5.0.1-nightly.20240214002530.0",
-    "@ceramicnetwork/stream-model": "4.0.1-nightly.20240214002530.0",
-    "@ceramicnetwork/stream-model-instance": "4.0.1-nightly.20240214002530.0",
-    "@ceramicnetwork/stream-tile": "5.0.1-nightly.20240214002530.0",
-    "@ceramicnetwork/streamid": "5.0.1-nightly.20240214002530.0",
+    "@ceramicnetwork/codecs": "^4.2.0",
+    "@ceramicnetwork/common": "^5.2.0",
+    "@ceramicnetwork/common-test-utils": "^3.3.0",
+    "@ceramicnetwork/http-client": "^5.3.0",
+    "@ceramicnetwork/stream-model": "^4.2.0",
+    "@ceramicnetwork/stream-model-instance": "^4.3.0",
+    "@ceramicnetwork/stream-tile": "^5.2.0",
+    "@ceramicnetwork/streamid": "^5.0.0",
+    "@composedb/client": "^0.7.1",
+    "@composedb/devtools": "^0.7.1",
     "@ipld/dag-json": "^10.1.7",
     "@jest/globals": "^29.7.0",
     "@jest/reporters": "^29.7.0",
@@ -40,6 +43,7 @@
     "cross-fetch": "^4.0.0",
     "dids": "5.0.2",
     "dotenv": "^16.3.1",
+    "graphql-request": "^6.1.0",
     "jest": "^29.7.0",
     "key-did-provider-ed25519": "4.0.2",
     "key-did-resolver": "4.0.0",
