--- a/suite/env/.env.qa
+++ b/suite/env/.env.qa
@@ -1,5 +1,5 @@
 ANCHOR_INTERVAL_MIN=780
-COMPOSEDB_URLS=
-CERAMIC_URLS=
+COMPOSEDB_URLS=http://keramik-ceramic-v4-qa-tailscale-0-0:7007,http://keramik-ceramic-v4-qa-tailscale-0-1:7007
+CERAMIC_URLS=http://keramik-ceramic-v4-qa-tailscale-0-0:5001,http://keramik-ceramic-v4-qa-tailscale-0-1:5001
 NETWORK=dev-unstable
 STAGE=qa
