--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -28,11 +28,9 @@ jobs:
       networks: ${{ steps.generate-matrix.outputs.networks }}
       build_tag: ${{ steps.generate-matrix.outputs.build_tag }}
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Generate network matrix
+      - name: Generate network matrix
         id: generate-matrix
         run: |
           NETWORKS=$(ls networks | jq -R -s -c '. | gsub(".yaml"; "") | split("\n")[:-1]')
@@ -51,41 +49,38 @@ jobs:
     runs-on: ubuntu-latest
     needs: generate-matrix
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Login to Public ECR
-      uses: docker/login-action@v2
-      with:
-        registry: public.ecr.aws
-        username: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      env:
-        AWS_REGION: us-east-1
-    - name: Build and Publish
-      run: make BUILD_TAG=${{ needs.generate-matrix.outputs.build_tag }} publish-suite
+      - uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Public ECR
+        uses: docker/login-action@v2
+        with:
+          registry: public.ecr.aws
+          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        env:
+          AWS_REGION: us-east-1
+      - name: Build and Publish
+        run: make BUILD_TAG=${{ needs.generate-matrix.outputs.build_tag }} publish-suite
 
   build-driver:
     name: Build 'hermetic-driver' binary
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: dtolnay/rust-toolchain@stable
-    - uses: Swatinem/rust-cache@v2
-      with:
-        # The prefix cache key, this can be changed to start a new cache manually.
-        # default: "v0-rust"
-        prefix-key: v0
-        # Cache only the cargo registry
-        cache-targets: false
-    - uses: mozilla-actions/sccache-action@v0.0.3
-    - name: Build Tester
-      run: make BUILD_PROFILE=release driver
-    - uses: actions/upload-artifact@master
-      with:
-        name: hermetic-driver
-        path: ./target/release/hermetic-driver
-        retention-days: 1
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: v0
+          cache-targets: false
+      - uses: mozilla-actions/sccache-action@v0.0.3
+      - name: Build Tester
+        run: make BUILD_PROFILE=release driver
+      - uses: actions/upload-artifact@master
+        with:
+          name: hermetic-driver
+          path: ./target/release/hermetic-driver
+          retention-days: 1
 
   run-tests:
     name: Test
@@ -100,16 +95,13 @@ jobs:
       matrix:
         networks: ${{ fromJSON(needs.generate-matrix.outputs.networks) }}
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Setup GKE auth
+      - name: Setup GKE auth
         uses: 'google-github-actions/auth@v1'
         with:
           credentials_json: ${{ secrets.GKE_SA_KEY }}
-      -
-        name: Get GKE credentials
+      - name: Get GKE credentials
         uses: 'google-github-actions/get-gke-credentials@v1'
         with:
           cluster_name: ${{ vars.GKE_CLUSTER }}
@@ -118,28 +110,20 @@ jobs:
         with:
           name: hermetic-driver
           path: ./bin
-      - 
-        name: Start timer
+      - name: Start timer
         id: start_time
         run: echo "::set-output name=start_time::$(date +%s)"
-      -
-        name: Test ${{ matrix.networks }}
+      - name: Test ${{ matrix.networks }}
         run: |
           export BUILD_TAG=${{ needs.generate-matrix.outputs.build_tag }}
           export TEST_NETWORK=./networks/${{ matrix.networks }}.yaml
           chmod +x ./bin/hermetic-driver
-
-          # For scheduled events, "test_selector" will be null, so default to running all tests.
           test_selector=${{ github.event.inputs.test_selector || '.' }}
-
-          # For PR and merge group events, run only "fast" tests.
-          # Note it is not possible to override "test_selector" for these types of events.
           if [[ ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }} == 'true' ]]; then
               test_selector="fast"
           fi
           make TEST_SELECTOR="$test_selector" HERMETIC_CMD=./bin/hermetic-driver hermetic-tests
-      - 
-        name: End timer
+      - name: End timer
         id: end_time
         run: echo "::set-output name=end_time::$(date +%s)"
 
@@ -148,18 +132,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: run-tests
     steps:
-      # Retrieve the start time and end time outputs from the run-tests job
       - name: Get job start time
         id: start_time
-        run: | 
-        echo "Job start time: ${{ needs.run-tests.outputs.start_time }}"
-        
+        run: |
+          echo "Job start time: ${{ needs.run-tests.outputs.start_time }}"
       - name: Get job end time
         id: end_time
         run: |
-        echo "Job end time: ${{ needs.run-tests.outputs.end_time }}"
-
-      # Calculate the duration of the job
+          echo "Job end time: ${{ needs.run-tests.outputs.end_time }}"
       - name: Calculate duration
         run: |
           start_time=$(date -d"${{ steps.start_time.outputs.start_time }}" +%s)
@@ -174,9 +154,5 @@ jobs:
     needs: [run-tests]
     steps:
       - run: exit 1
-        # see https://stackoverflow.com/a/67532120/4907315
         if: >-
-          ${{
-               contains(needs.*.result, 'failure')
-            || contains(needs.*.result, 'cancelled')
-          }}
+          ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') }}
