--- a/suite/package.json
+++ b/suite/package.json
@@ -32,18 +32,22 @@
     "@ceramicnetwork/streamid": "^5.0.0",
     "@composedb/client": "^0.7.1",
     "@composedb/devtools": "^0.7.1",
-    "@ipld/dag-json": "^10.1.7",
+    "@didtools/pkh-ethereum": "^0.5.0",
     "@ipld/dag-cbor": "^7.0.0",
+    "@ipld/dag-json": "^10.1.7",
     "@jest/globals": "^29.7.0",
     "@jest/reporters": "^29.7.0",
     "@stablelib/random": "^1.0.2",
     "axios": "^0.24.0",
+    "caip": "^1.1.1",
     "cartonne": "^3.0.1",
     "codeco": "^1.2.1",
     "cross-eventsource": "^1.0.0",
     "cross-fetch": "^4.0.0",
+    "did-session": "^3.1.0",
     "dids": "5.0.2",
     "dotenv": "^16.3.1",
+    "ethers": "^6.13.0",
     "graphql-request": "^6.1.0",
     "jest": "^29.7.0",
     "key-did-provider-ed25519": "4.0.2",
@@ -58,5 +62,5 @@
     "uint8arrays": "^5.0.1"
   },
   "prettier": "eslint-config-3box/prettier.config",
-  "packageManager": "pnpm@^8.8.0"
+  "packageManager": "pnpm@8.8.0"
 }
