--- a/.github/workflows/run-performance.yaml
+++ b/.github/workflows/run-performance.yaml
@@ -39,11 +39,14 @@ jobs:
 
       - name: Install yq
         run: |
-          sudo apt-get update
-          sudo apt-get install -y software-properties-common
-          sudo add-apt-repository -y ppa:rmescandon/yq
-          sudo apt-get update
-          sudo apt-get install -y yq
+          # sudo apt-get update
+          # sudo apt-get install -y software-properties-common
+          # sudo add-apt-repository -y ppa:rmescandon/yq
+          # sudo apt-get update
+          # sudo apt-get install -y yq
+          curl -L https://github.com/mikefarah/yq/releases/download/v4.40.7/yq_linux_amd64 -o yq
+          chmod +x yq
+          sudo mv ./yq /usr/local/bin/yq
 
       - name: Template network
         run: |
