--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -35,7 +35,7 @@ jobs:
         name: Generate network matrix
         id: generate-matrix
         run: |
-          NETWORKS=$(ls networks | jq -R -s -c '. | gsub(".yaml"; "") | split("\n")[:-1]')
+          NETWORKS=$(ls networks *.yaml| jq -R -s -c '. | gsub(".yaml"; "") | split("\n")[:-1]')
           echo "Networks:"
           echo ${NETWORKS}
           echo "networks=${NETWORKS}" >> $GITHUB_OUTPUT
@@ -136,7 +136,7 @@ jobs:
           fi
           make TEST_SELECTOR="$test_selector" HERMETIC_CMD=./bin/hermetic-driver hermetic-tests
   run-migration-tests:
-    name: Test
+    name: Test Migrations
     runs-on: ubuntu-latest
     environment: test
     needs:
