fix: use build tag image

--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -142,6 +142,7 @@ jobs:
     needs:
       - build-driver
       - publish-suite
+      - generate-matrix #Needed to know the BUILD_TAG
     steps:
       -
         name: Checkout
