--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -13,7 +13,7 @@ on:
         type: string
         description: Path regex passed to Jest to select which tests to run
         required: true
-        default: fast
+        default: correctness/fast
 
 env:
   CARGO_TERM_COLOR: always
@@ -127,12 +127,12 @@ jobs:
           chmod +x ./bin/hermetic-driver
 
           # For scheduled events, "test_selector" will be null, so default to running all tests.
-          test_selector=${{ github.event.inputs.test_selector || '.' }}
+          test_selector=${{ github.event.inputs.test_selector || 'correctness' }}
 
           # For PR and merge group events, run only "fast" tests.
           # Note it is not possible to override "test_selector" for these types of events.
           if [[ ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }} == 'true' ]]; then
-              test_selector="fast"
+              test_selector="correctness/fast"
           fi
           make TEST_SELECTOR="$test_selector" HERMETIC_CMD=./bin/hermetic-driver hermetic-tests
   run-migration-tests:
