fix: bump ceramic package versions to 6.x

--- a/suite/Dockerfile
+++ b/suite/Dockerfile
@@ -17,4 +17,4 @@ COPY src/ ./src
 # Select all tests by default
 ENV TEST_SELECTOR "correctness"
 
-ENTRYPOINT ["/app/entrypoint.sh", "run", "test", "--forceExit", "--testPathPattern", "$TEST_SELECTOR"]
+ENTRYPOINT ["/app/entrypoint.sh", "run", "test", "--testPathPattern", "$TEST_SELECTOR"]
