--- a/networks/experimental-rust.yaml
+++ b/networks/experimental-rust.yaml
@@ -6,7 +6,9 @@ metadata:
 spec:
   replicas: 2
   ceramic:
-    - image: "ceramicnetwork/composedb:dev"
+    - env:
+        CERAMIC_DISABLE_ANCHORING: "true"
+      image: "ceramicnetwork/composedb:dev"
       imagePullPolicy: Always # Ensures the image is always pulled before starting the pod
       ipfs:
         rust:
@@ -14,6 +16,9 @@ spec:
             CERAMIC_ONE_EXPERIMENTAL_FEATURES: "true"
             CERAMIC_ONE_EVENT_VALIDATION: "true"
             CERAMIC_ONE_ETHEREUM_RPC_URLS: "http://ganache:8545"
+            CERAMIC_ONE_REMOTE_ANCHOR_SERVICE_URL: "http://cas:8081"
+            CERAMIC_ONE_ANCHOR_INTERVAL: 1
+            CERAMIC_ONE_ANCHOR_POLL_INTERVAL: 5
           resourceLimits:
             cpu: "4"
             memory: "1Gi"
