--- a/networks/experimental-rust.yaml
+++ b/networks/experimental-rust.yaml
@@ -13,6 +13,7 @@ spec:
           env:
             CERAMIC_ONE_EXPERIMENTAL_FEATURES: "true"
             CERAMIC_ONE_EVENT_VALIDATION: "true"
+            CERAMIC_ONE_ETHEREUM_RPC_URLS: "http://ganache:8545"
           resourceLimits:
             cpu: "4"
             memory: "1Gi"
