--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -90,7 +90,7 @@ jobs:
   run-tests:
     name: Test
     runs-on: ubuntu-latest
-    environment: test
+    environment: dev
     needs:
       - generate-matrix
       - build-driver
